modificando o códigos das structures e criando os arquivos utils

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,2 @@
-Adicionar atributo "fim" ao loanlist
-Adicionar novo método ao loanlist
-Revisar o código da bookshelf
+Desenvolver os códigos do cliente e servidor
+Desenvolver as funções de utils
