--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-desenvolver metodo pra retornar os loans de um user
-fazer dar erro quando o cliente enviar 'register x' por exemplo 
 definir código de erro para cada uma das exceções e para OK
+verificar o comando quit para encerrar conexão
+implementar threads e semaforos
