--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,3 @@
-definir código de erro para cada uma das exceções e para OK
-verificar o comando quit para encerrar conexão
+implementar o metodo list_books
+verificar a implementação do semaforos e threads
 implementar threads e semaforos
